service.yaml

apiVersion: v1
kind: Service

metadata:
  name: kravix-service

spec:
  selector:
    app: kravix-project

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
