ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: kravix-ingress

spec:
  rules:
  - host: kravix.local

    http:
      paths:
      - path: /

        pathType: Prefix

        backend:
          service:
            name: kravix-service

            port:
              number: 80
